--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.24.4",
+    "@tanstack/react-query-devtools": "^4.24.4",
     "antd": "^5.1.6",
     "axios": "^1.2.6",
     "react": "^18.2.0",
@@ -31,6 +33,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.3",
+    "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
